[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.24",
    "langchain>=0.3.25",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "streamlit>=1.45.1",
]
